[package]
name = "chouette"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"

[dependencies]
warp = "0.1.11"
serde = "1.0.0"
serde_derive = "1.0.0"
toml = "0.4"
diesel = { version = "1.0.0", features = ["postgres"] }
rand = "0.6.1"
bcrypt = "0.2.1"
log = "0.4.6"
stderrlog = "0.4.1"
clap = "2.32.0"
futures-state-stream = "0.1.1"
tokio-imap = "0.4.0"
tokio = "0.1.14"
imap-proto = "0.6.0"
