[package]
name = "chouette"
version = "0.1.0"
authors = ["Thomas Forgione <thomas@forgione.fr>"]
edition = "2018"

[dependencies]
serde = "1.0.85"
serde_derive = "1.0.85"
toml = "0.4"
rand = "0.6.1"
bcrypt = "0.2.1"
clap = "2.32.0"
serde_json = "1.0.36"
diesel = { version = "1.3.3", features = ["postgres"] }
lazy_static = "1.2.0"
rocket = "0.4.0"
imap = "0.10.0"
native-tls = "0.2.2"
nom-mail-parser = { path = "../nom-mail-parser" }
